Desativação de botoes

--- a/00_home/index.html
+++ b/00_home/index.html
@@ -24,8 +24,8 @@
             <nav>
                 <ul>
                     <li><a href="../01_estoque/index.html">Ver Estoque</a></li>
-                    <li><a href="https://www.youtube.com/">Vender Meu Carro</a></li>
-                    <li><a href="https://www.youtube.com/">Sessão Interna</a></li>
+                    <li><a href="#" onclick="return false;">Vender Meu Carro</a></li>
+                    <li><a href="#" onclick="return false;">Sessão Interna</a></li>
                 </ul>
             </nav>
         </div>
@@ -121,19 +121,19 @@
             <div class="_1_lista">
                 <ul>
                     <li>
-                        <a href="#">
+                        <a href="#" onclick="return false;">
                             <span>Compramos seu Carro</span>
                         </a>
                     </li>
 
                     <li>
-                        <a href="#">
+                        <a href="#" onclick="return false;">
                             <span>Vendemos seu carro</span>
                         </a>
                     </li>
 
                     <li>
-                        <a href="#">
+                        <a href="#" onclick="return false;">
                             <span>Trabalhe Aqui</span>
                         </a>
                     </li>
@@ -141,7 +141,7 @@
             </div>
 
             <div class="saiba-mais">
-                <a href="/">
+                <a href="#" onclick="return false;">
                     <img class="linkdin" src="./icones_footer/linkedin.png" alt="endereco">
                     <span>Saiba mais sobre a empresa</span>
                 </a>
@@ -149,7 +149,7 @@
 
             <div class="local">
                 
-                <a href="https://www.google.com.br/maps/place/Walt+Disney+World/@28.4112645,-81.5893708,12.72z/data=!4m6!3m5!1s0x88e78117527adab1:0xc32f1cacf9deeebc!8m2!3d28.416024!4d-81.5811983!16s%2Fg%2F11vd8m0gzs?entry=ttu&g_ep=EgoyMDI0MTAwOS4wIKXMDSoASAFQAw%3D%3D">
+                <a href="#" onclick="return false;">
                     <img class="mapa" src="./icones_footer/marcador-de-mapa.png" alt="endereco">
                     <span>Avenida velozes e furiosos, 728</span>
                 </a>
