Desabilitando botoes sem função

--- a/00_home/index.html
+++ b/00_home/index.html
@@ -36,28 +36,28 @@
             <nav>
                 <ul>
                     <li>
-                        <a href="https://www.instagram.com/reel/C_xxaobPfQg/">
+                        <a href="#" onclick="return false;">
                             <img src="./emblemas/instaSemFundo-removebg-preview.png" alt="insta">
                             <span class="insta" >actiontrack_cars</span>
                         </a>
                     </li>
                     
                     <li>
-                        <a href="https://www.facebook.com/photo/?fbid=530770209597486&set=gm.1789862138427006&idorvanity=712489632830934">
+                        <a href="#" onclick="return false;">
                             <img src="./emblemas/face-removebg-preview.png" alt="face">
                             <span class="face">cars_actiontrack</span>
                         </a>
                     </li>
                     
                     <li>
-                        <a href="https://www.facebook.com/photo/?fbid=1133046575046292&set=a.304754814542143">
+                        <a href="#" onclick="return false;">
                             <img src="./emblemas/whatsSemfundo-removebg-preview.png" alt="whats">
                             <span class="whats">51991239456</span>
                         </a>
                     </li>
 
                     <li>
-                        <a href="https://www.facebook.com/photo/?fbid=946501017518882&set=a.464061922429463">
+                        <a href="#" onclick="return false;">
                             <img src="./emblemas/Email.png" alt="email">
                             <span class="email">actiontrack_28@hotmail.com</span>
                         </a>
@@ -80,7 +80,7 @@
     </div>
 
     <div class="caixas-centrais">
-        <a href="https://www.youtube.com/watch?v=zEoQcNp1O-M&t=68s">
+        <a href="#" onclick="return false;">
             <img src="./img/tela_youtube.png" alt="img_revenda">
         </a>    
 
